...


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/search"

        android:title="Search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/logo_pic"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Logo"
        app:showAsAction="ifRoom"/>

</menu>
