...
            android:padding="8dp"
            android:text="@string/Search"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</FrameLayout>
